# OOP-Project2

./: Bedroom.cpp  Bedroom.h  Building.cpp  Building.h  CMakeLists.txt  Colors.h  House.cpp  House.h  Institution.cpp  Institution.h  Kitchen.cpp  Kitchen.h  LivingRoom.cpp  LivingRoom.h  NotAValidBuilding.cpp  NotAValidBuilding.h  NotAValidRoom.cpp  NotAValidRoom.h  Office.cpp  Office.h  README.md  ResidenceHall.cpp  ResidenceHall.h  Room.cpp  Room.h  Toilet.cpp  Toilet.h  main.cpp
