cmake_minimum_required(VERSION 3.24)
project(Tema2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Tema2 main.cpp Room.cpp Room.h Toilet.cpp Toilet.h Bedroom.cpp Bedroom.h LivingRoom.cpp LivingRoom.h Kitchen.cpp Kitchen.h Office.cpp Office.h ResidenceHall.cpp ResidenceHall.h Institution.cpp Institution.h House.cpp House.h Building.cpp Building.h)
